# BACKTEST_RUST

./: .gitignore  Cargo.toml  README.md  make_zip.sh  results.csv
dataKLines/: BTC-USDT-12h.feather  BTC-USDT-12h.json  BTC-USDT-1h.feather  BTC-USDT-2h.feather  BTC-USDT-2h.json  BTC-USDT-30m.feather  BTC-USDT-4h.feather  BTC-USDT-4h.json
examples/: migrate_caches.rs
old/data_downloader_freqtrade/: Dockerfile.technical  README.md  docker-compose.yml
old/data_downloader_freqtrade/user_data/: config_backtest.json
old/data_downloader_freqtrade/user_data/backtest_results/: .last_result.json
old/data_downloader_freqtrade/user_data/hyperopt_results/: .last_result.json
old/data_downloader_freqtrade/user_data/strategies/: dummy.py
src/: backtest.rs  data.rs  download.rs  exchange.rs  feather.rs  lib.rs  main.rs  metrics.rs  output.rs  precision.rs  ta_wrapper.rs  utils.rs
src/auto_trading/: backtester.rs  base.rs  exchange.rs  match_engine.rs  mod.rs  util.rs
src/strategy/: double_ema.rs  mod.rs  single_ema.rs
tests/: integration.rs
