[package]
name = "BACKTEST_RUST"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
chrono = "0.4"
rayon = "1.5.1"
tokio = { version = "1.29.1", features = ["full"] }
reqwest = { version = "0.11.18", features = ["json"] }
async-trait = "0.1.72"
overload = "0.1.1"

[profile.release]
opt-level = 3  # Full release optimizations.
